Fix dots getting cutoff on edges.

--- a/ass/leaf.css
+++ b/ass/leaf.css
@@ -15,13 +15,15 @@ text {
 
 svg {
     position: relative;
+    z-index: 100;
 }
 
 path {
     /* fill: #ffd800; */
     /* fill: blue; */
     fill-opacity: .2;
-    z-index: 10; // so it doesn't get covere with tiles
+    z-index: 101;
+    /* so it doesn't get covere with tiles */
 }
 
 path:hover {
